Fixed Logout on small devices

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -45,3 +45,7 @@
         display: none;
     }
 }
+
+.header__rightLogout {
+    display: flex;
+}
